--- a/src/App.css
+++ b/src/App.css
@@ -17,11 +17,21 @@
 
 .products {
   border: solid 1px black;
-  height: 350px;
+  height: 440px;
   width: 250px;
 }
 
 .card-img {
   height: 200px;
   width: 200px;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.card-text {
+  text-align: center;
 }
